generator/templates/manifests/kubeflow-tools/knative/patches/patchIstioGateways.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: knative-local-gateway
  namespace: knative-serving
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: "1.13.1"
    networking.knative.dev/ingress-provider: istio
spec:
  selector:
    app: deploykf-gateway
    istio: deploykf-gateway
  servers:
    - port:
        number: 8081
        name: http
        protocol: HTTP
      hosts:
      - '*.kn.kf.cz.weystrom.net'
---
apiVersion: v1
kind: Service
metadata:
  name: knative-local-gateway
  namespace: istio-system
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: "1.13.1"
    networking.knative.dev/ingress-provider: istio
    experimental.istio.io/disable-gateway-port-translation: "true"
spec:
  type: ClusterIP
  selector:
    app: deploykf-gateway
    istio: deploykf-gateway
  ports:
    - name: http2
      port: 80
      targetPort: 8081
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: knative-ingress-gateway
  namespace: knative-serving
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: "1.13.1"
    networking.knative.dev/ingress-provider: istio
spec:
  selector:
    app: deploykf-gateway
    istio: deploykf-gateway
  servers:
    - hosts:
      - '*.kn.kf.cz.weystrom.net'
      port:
        number: 80
        name: http
        protocol: HTTP
    - hosts:
      - '*.kn.kf.cz.weystrom.net'
      port:
        name: https-wildcard
        number: 443
        protocol: HTTPS
      tls:
        credentialName: knative-tls-cert
        mode: SIMPLE
